Configure media bundle basic type and filesystem

--- a/cms/blocks/user_dropdown/render.html.twig
+++ b/cms/blocks/user_dropdown/render.html.twig
@@ -9,14 +9,10 @@
             <li><a class="dropdown-item" href="{{ url('sfs_user_change_password') }}">Change password</a></li>
             <li><a class="dropdown-item" href="{{ url('sfs_user_preferences') }}">Settings</a></li>
             {% if is_granted('ROLE_ADMIN') %}
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
+                <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="{{ url('admin_dashboard') }}" target="_blank">Admin panel</a></li>
             {% endif %}
-            <li>
-                <hr class="dropdown-divider">
-            </li>
+            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="{{ url('sfs_user_logout') }}">Sign out</a></li>
         </ul>
     </div>
