--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-md-12">
-                    <h3>Welcome to Sfs Builder admin panel.</h3>
+                    <h3>Welcome to Symfonic admin panel.</h3>
                     <p>Here you can manage your website content.</p>
                 </div>
             </div>
