Override admin layout templates

--- a/templates/bundles/SfsMediaBundle/admin_layout.html.twig
+++ b/templates/bundles/SfsMediaBundle/admin_layout.html.twig
@@ -1,6 +1,4 @@
-{% extends '@!SfsComponents/layout/admin.bootstrap5.html.twig' %}
-
-{% block logo_img %}<img src="https://dummyimage.com/150x35/0d6efd/ffffff.png?text=Symfonic" height="35" alt="logo"/>{% endblock %}
+{% extends '@!SfsCms/admin_layout.html.twig' %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('admin') }}
@@ -14,5 +12,3 @@
     {# THOSE JAVASCRIPTS GO AFTER BODY #}
     {{ encore_entry_script_tags('admin') }}
 {% endblock %}
-
-
