--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -26,21 +26,21 @@
                 <div class="col-6">
                     <h4>Get started</h4>
                     <ul>
-                        <li><a href="#">Read the user guide</a></li>
+                        <li><a href="https://symfonic.softspring.es/" target="_blank">Read the user guide</a></li>
                     </ul>
                 </div>
                 <div class="col-3">
                     <h4>Next steps</h4>
                     <ul>
-                        <li><a href="#">Create new page</a></li>
-                        <li><a href="#">Configure menu</a></li>
+                        <li><a href="https://symfonic.softspring.es/latest/create-a-new-page" target="_blank">Create new page</a></li>
+                        <li><a href="https://symfonic.softspring.es/latest/configure-menus" target="_blank">Configure menu</a></li>
                         <li><a href="#">Review your sitemap</a></li>
                     </ul>
                 </div>
                 <div class="col-3">
                     <h4>More actions</h4>
                     <ul>
-                        <li><a href="#">Invite another administrator</a></li>
+                        <li><a href="https://symfonic.softspring.es/latest/bundles/user-bundle/install" target="_blank">Invite another administrator</a></li>
                 </div>
             </div>
         </div>
