rename to Armonic

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-md-12">
-                    <h3>Welcome to Symfonic admin panel.</h3>
+                    <h3>Welcome to Armonic admin panel.</h3>
                     <p>Here you can manage your website content.</p>
                 </div>
             </div>
@@ -26,21 +26,22 @@
                 <div class="col-6">
                     <h4>Get started</h4>
                     <ul>
-                        <li><a href="https://symfonic.softspring.es/" target="_blank">Read the user guide</a></li>
+                        <li><a href="https://armonic.softspring.es/" target="_blank">Read the user guide</a></li>
                     </ul>
                 </div>
                 <div class="col-3">
                     <h4>Next steps</h4>
                     <ul>
-                        <li><a href="https://symfonic.softspring.es/latest/create-a-new-page" target="_blank">Create new page</a></li>
-                        <li><a href="https://symfonic.softspring.es/latest/configure-menus" target="_blank">Configure menu</a></li>
+                        <li><a href="https://armonic.softspring.es/latest/create-a-new-page" target="_blank">Create new page</a></li>
+                        <li><a href="https://armonic.softspring.es/latest/configure-menus" target="_blank">Configure menu</a></li>
                         <li><a href="#">Review your sitemap</a></li>
                     </ul>
                 </div>
                 <div class="col-3">
                     <h4>More actions</h4>
                     <ul>
-                        <li><a href="https://symfonic.softspring.es/latest/bundles/user-bundle/install" target="_blank">Invite another administrator</a></li>
+                        <li><a href="https://armonic.softspring.es/latest/bundles/user-bundle/install" target="_blank">Invite another administrator</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
