--- a/templates/bundles/SfsComponentsBundle/layout/admin.bootstrap5.html.twig
+++ b/templates/bundles/SfsComponentsBundle/layout/admin.bootstrap5.html.twig
@@ -1,6 +1,6 @@
 {% extends '@!SfsComponents/layout/admin.bootstrap5.html.twig' %}
 
-{% block logo_img %}<img src="https://dummyimage.com/150x35/0d6efd/ffffff.png?text=Symfonic" height="35" alt="logo"/>{% endblock %}
+{% block logo_img %}<img src="https://dummyimage.com/150x35/0d6efd/ffffff.png?text=Armonic" height="35" alt="logo"/>{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('admin') }}
